Remove incorrect bit shift when assigning the LUN request field

This caused duplicate targets appearing on Google Compute Engine
instances.

PR:		kern/185626
Submitted by:	Venkatesh Srinivas <venkateshs@google.com>
MFC after:	3 days


git-svn-id: svn+ssh://svn.freebsd.org/base/head@260566 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f